complete user swag file
